--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
   <body>
     <div id="container">
       <div id="profile">
-        <img src="/assets/avatar.png" alt="Foto da Natália com  fundo cortando" />
+        <img
+          src="./assets/avatar.png"
+          alt="Foto da Natália com  fundo cortando"
+        />
         <p>@itsnatycarvalho</p>
       </div>
       <div id="switch" onclick="toggleMode()">
